--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <style>
         body{
-            font-family: "Rubik", sans-serif;
+        font-family: "Rubik", sans-serif;
         font-optical-sizing: auto;
         font-weight: 400;
         font-style: normal;
@@ -22,7 +22,7 @@
 <body>
 <center>
     <div>
-        <label for="num">Enter Your Code</label>
+        <label for="num">Enter Your Phone Number</label>
         <input type="number" id="num">
         <button onclick="result()">Result</button>
         <h3 id="result"></h3>
@@ -31,10 +31,10 @@
 <script>
 function result(){
 let x = document.getElementById("num").value
-if(x == 1){
+if(x == 01023847423 || x == 01068765563){
     open('index2.html', '_self', '', '')
 }else{
-    document.getElementById("result").innerHTML = "Please Enter Your Correct Code"
+    document.getElementById("result").innerHTML = "Please Enter Your Correct Phone Number"
 }
 document.getElementById("num").value =""
 }
