--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 <body>
 <center>
     <div>
-        <label for="num">Enter Your Phone Number</label>
-        <input type="number" id="num">
+        <input type="number" id="num" placeholder="Phone Number">
         <button onclick="result()">Result</button>
         <h3 id="result"></h3>
     </div>
